# yahboom-mcp

./: .gitignore  CHANGELOG.md  HANDOVER.md  INSTALL.md  Mcnamu_driver_patched.py  PRD.md  README.md  STATUS.md  check_topics.py  check_topics2.py  debug_routes.py  deploy_key.py  git_diff_out.txt  git_diff_ssh.txt  glama.json  inspect_fastmcp_v2.py  inspect_fastmcp_v3.py  inspect_fastmcp_v4.py  inspect_fastmcp_v5.py  inspect_fastmcp_v6.py  justfile  mcp_bringup.launch.py  minimal_mission_executor.py  pyproject.toml  start.bat  start.ps1  test_fastmcp_fix.py  vision_bridge.py  yahboom_cam_host.py  yahboom_sota.launch.py
.github/workflows/: ci.yml
docs/: AI_CAPABILITIES.md  ASSESSMENT_2026.md  ASSETS.md  AVOIDANCE_STRATEGY.md  BOOMY_AUTONOMOUS_INTELLIGENCE.md  BOOMY_COGNITIVE_VISION.md  COGNITIVE_PI5_MANUAL.md  CONNECTIVITY.md  DREAME_STANDALONE_RECOMMENDATION.md  EMBODIED_AI.md  FASTMCP3_UNIFIED_GATEWAY.md  GEMMA4_EDGE_LLM.md  HARDWARE_AND_ROS2.md  MCP_CENTRAL_DOCS_UPDATE.md  MECANUM_WHEELS.md  NEUROPHILOSOPHY_OVERVIEW.md  PI_LESS_SETUP.md  PRODUCTION_READINESS.md  RASPI_SOFTWARE_STACK.md  SENSORY_HUB.md  STATUS_CONTINUE.md  TESTING.md  TODO.md  WIFI_TRANSITION.md  architecture.md  core  fleet  integration_guide.md  status.md  structure.md
docs/archive/: ASSESSMENT_2026.md  STATUS_HANDOFF.md  status.md
docs/core/: ARCHITECTURE_DECISION_ROS2_VS_LLM.md  ARCHITECTURE_REVIEW.md  BOOMY_AUTONOMOUS_INTELLIGENCE.md  BOOMY_COGNITIVE_ARCHITECTURE.md  EMBODIED_AI.md  structure.md
docs/experimental/: BATTLEBOT_V0.1.md  BUTLERBOT_V0.1.md  LEGAL_ETHICAL_FRAMEWORK.md
docs/factory/: LEGACY_DEMO_AUDIT.md
docs/fleet/: DREAME_STANDALONE_RECOMMENDATION.md  ENVIRONMENTAL_DESIGN.md  FLEET_VISION_TIER_2.md  HARDWARE_RESEARCH_CLAW.md  MANIPULATION_ROADMAP.md  MISSION_WURSTSEMMEL.md  SCALING_TO_X3_PLUS.md  fleet_overview.md
docs/hardware/: DOCKING_STATION_DESIGN.md  HARDWARE_AND_ROS2.md  HARDWARE_DIAGNOSIS_VOICE_I2C.md  RASPBOT_V2_HARDWARE_STACK.md  ROSBRIDGE.md  ROSMASTER_ARCHITECTURE.md  ROSMASTER_ESP32.md  SENSORS.md  VOICE_AUDIO.md  VOICE_AUDIO_UPGRADE.md  WEBAPP_3D_VIZ.md  generate_tfmini_bracket.py  test_box.stl.FCStd  tfmini_bracket_base.stl  tfmini_bracket_camcut.stl  tfmini_bracket_final.gcode  tfmini_bracket_final.stl  tfmini_bracket_tfmcut.stl  tfmini_camera_bracket.py
docs/ops/: AGENT_MISSION_AND_MCP.md  AUTONOMOUS_MISSIONS.md  COFFEESHOP_DEMO.md  GEMMA_LOCAL_AI_IMPLEMENTATION.md  PI_LESS_SETUP.md  PRODUCTION_READINESS.md  RASPBOT_MOTION_TROUBLESHOOTING.md  RASPI_SOFTWARE_STACK.md  ROSBRIDGE_AT_BOOT.md  STACK_HEALTH_PROBE.md  STARTUP_AND_BRINGUP.md  TESTING.md  installation.md
ros2/boomy_dreame_map_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2/boomy_dreame_map_bridge/boomy_dreame_map_bridge/: __init__.py  dreame_map_publisher_node.py
ros2/boomy_dreame_map_bridge/launch/: dreame_map_bridge.launch.py
ros2/boomy_mission_executor/: README.md  package.xml  setup.cfg  setup.py
ros2/boomy_mission_executor/boomy_mission_executor/: detection_utils.py  mission_executor_node.py
ros2/boomy_mission_executor/launch/: mission_executor.launch.py
ros2/sweep_scan/: package.xml  setup.py  sweep_scan_node.py
scratch/: check_audio.py  check_audio_tools.py  check_ollama.py  debug_robot.py  install_mpg123.py  integration_test_v16.py  test_beep.py
scripts/: Install-RosbridgeOnRobot.ps1  audit_ap.py  audit_ap_v2.py  audit_camera_system.py  audit_camera_system_v2.py  audit_container_camera.py  audit_container_v2.py  audit_hardware.py  boomy_full_setup.sh  boomy_step_to_stl.FCMacro  camera_debug_logs.py  camera_discovery_v2.py  camera_truth_probe.py  check_camera_logs.py  check_health.py  check_robot_topics.py  check_servo.py  check_topics_live.py  convert_step_to_stl.py  debug_i2c.py  debug_ssh_raw.py  deploy_boomy_cognitive.py  deploy_boomy_neural_partition.py  deploy_cognitive_pack.py  deploy_driver_and_oled.sh  deploy_pi.sh  deploy_robot_diagnostic.py  deploy_robot_upgrades.py  diag_camera_hardware.py  diag_host_hardware.py  diagnose_sensors.sh  discover_camera.py  discover_camera_driver.py  discover_rosmaster.py  discover_yahboom_drivers.py  discover_yahboom_v2.py  embodied_loop.py  final_camera_probe.py  final_reality_pulse.py  finalize_boomy_ssd.py  (+42 more)
scripts/robot/: deploy-autostart.py  install-rosbridge-at-boot.sh  install_peripherals_pi.sh  peripheral_bridge.py  scan_i2c_all.py  set_lights.py  setup-autostart.sh  test_ssh.py  yahboom-peripheral-bridge.service
skills/: yahboom-operator.md  yahboom-robots-expert.md
skills/yahboom-operator/: SKILL.md
skills/yahboom-robots-expert/: SKILL.md
src/yahboom_mcp/: __init__.py  agent_mission.py  agentic.py  diag.py  fastapi_app.py  portmanteau.py  prompts.py  server.py  stack_probe.py  state.py
src/yahboom_mcp/core/: esp32_bridge.py  ros2_bridge.py  ssh_bridge.py  video_bridge.py
src/yahboom_mcp/operations/: camera_ptz.py  diagnostics.py  display.py  lidar.py  lightstrip.py  missions.py  motion.py  safety.py  sensors.py  tapo_audio.py  trajectory.py  voice.py
src/yahboom_mcp/scripts/: deactivate_demo.sh
src/yahboom_mcp/skills/: __init__.py  diagnostic_triage.py  emergency_halt.py  patrol_sweep.py  quick_pilot.py
src/yahboom_mcp/testing/: __init__.py  mock_bridge.py
tests/: conftest.py  test_hardware_sync.py  test_operations.py
tests/e2e/: test_patrol.py
tests/hardware/: test_ros_bridge_real.py  test_rosbridge_tcp.py  test_status.py
tests/integration/: test_fastapi_mock_bridge.py
tests/unit/: __init__.py  test_agent_mission.py  test_agentic.py  test_all.py  test_camera_sensors.py  test_detection_utils.py  test_lidar.py  test_portmanteau_behaviour.py  test_ros2_bridge_math.py  test_ros_tools.py  test_safety.py
webapp/: biome.json  index.html  package-lock.json  package.json  start.bat  start.ps1  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webapp/public/assets/meshes/: test.stl
webapp/src/: App.tsx  index.css
webapp/src/components/: StackStatusTable.tsx
webapp/src/components/common/: ErrorBoundary.tsx
webapp/src/lib/: api.ts
(+26 files in other folders)
