[project]
name = "yahboom-mcp"
version = "0.1.0"
description = "SOTA 2026 Yahboom G1 ROS 2 MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "roslibpy>=1.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "structlog>=23.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "python-miio>=0.5.12",
    "paramiko>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahboom_mcp"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast, no I/O",
    "mock: uses mock bridge / fakes (default CI)",
    "integration: ASGI, HTTP, or multi-module",
    "real_robot: needs physical robot or lab network (skipped unless YAHBOOM_E2E=1)",
    "slow: optional long-running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["yahboom_mcp"]
omit = ["*/testing/*", "*/tests/*"]
