<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>boomy_dreame_map_bridge</name>
  <version>0.1.0</version>
  <description>
    Fetches JSON from dreame-mcp GET /api/v1/map, converts base64 PNG to
    nav_msgs/OccupancyGrid for Nav2. Boomy (Raspbot) keeps MS200 /scan for local
    navigation later; this layer supplies a static floor plan from the Dreame vacuum.
  </description>
  <maintainer email="dev@local">Yahboom MCP</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
